--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="#" onclick="scrollToTop(event)" title="Back to top">
-                <img src="logo.png" alt="Klinik Medinura Logo" class="navbar-logo me-2" style="height:40px"> <span class="fs-5">Klinik Medinura</span>
+                <img src="assets/logo.png" alt="Klinik Medinura Logo" class="navbar-logo me-2" style="height:40px"> <span class="fs-5">Klinik Medinura</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -503,7 +503,7 @@
             
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6">
-                    <img src="logo.png" alt="Klinik Medinura" class="img-fluid rounded-4" style="max-width: 100%;">
+                    <img src="assets/logo.png" alt="Klinik Medinura" class="img-fluid rounded-4" style="max-width: 100%;">
                 </div>
                 <div class="col-lg-6">
                     <h3 class="mb-4" data-en="Your Family's Health is Our Priority" data-ms="Kesihatan Keluarga Anda adalah Prioriti Kami">Your Family's Health is Our Priority</h3>
@@ -549,7 +549,7 @@
                 <div class="col-md-6 col-lg-4 doctor-card-wrapper" data-category="gp">
                     <div class="card h-100 text-center overflow-hidden doctor-card">
                         <div class="doctor-badge">
-                            <img src="logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
+                            <img src="assets/logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Dr. Ahmad Hakim" data-ms="Dr. Ahmad Hakim">Dr. Ahmad Hakim</h5>
@@ -567,7 +567,7 @@
                 <div class="col-md-6 col-lg-4 doctor-card-wrapper" data-category="specialist">
                     <div class="card h-100 text-center overflow-hidden doctor-card">
                         <div class="doctor-badge">
-                            <img src="logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
+                            <img src="assets/logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Dr. Siti Nurhaliza" data-ms="Dr. Siti Nurhaliza">Dr. Siti Nurhaliza</h5>
@@ -585,7 +585,7 @@
                 <div class="col-md-6 col-lg-4 doctor-card-wrapper" data-category="specialist">
                     <div class="card h-100 text-center overflow-hidden doctor-card">
                         <div class="doctor-badge">
-                            <img src="logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
+                            <img src="assets/logo.png" alt="Doctor" class="rounded-circle" style="width: 120px; height: 120px; padding: 10px;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Dr. Baljit Singh" data-ms="Dr. Baljit Singh">Dr. Baljit Singh</h5>
@@ -613,7 +613,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="treatment-image" style="background: linear-gradient(135deg, #d97b8a 0%, #f4a6b5 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <img src="logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
+                            <img src="assets/logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Ultrasound Screening" data-ms="Pemeriksaan Ultrasound">Ultrasound Screening</h5>
@@ -627,7 +627,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="treatment-image" style="background: linear-gradient(135deg, #f4a6b5 0%, #d97b8a 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <img src="logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
+                            <img src="assets/logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Health Checkup Packages" data-ms="Pakej Pemeriksaan Kesihatan">Health Checkup Packages</h5>
@@ -641,7 +641,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="treatment-image" style="background: linear-gradient(135deg, #d97b8a 0%, #f4a6b5 100%); height: 200px; display: flex; align-items: center; justify-content: center;">
-                            <img src="logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
+                            <img src="assets/logo.png" alt="Treatment" style="width: 120px; height: 120px; object-fit: contain;">
                         </div>
                         <div class="card-body">
                             <h5 data-en="Vaccination Services" data-ms="Perkhidmatan Vaksinasi">Vaccination Services</h5>
@@ -679,7 +679,7 @@
                                 Excellent service and professional doctors. They took care of my family like their own. Highly recommended!
                             </p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
+                                <img src="assets/logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
                                 <div>
                                     <p class="mb-0 fw-bold">Fatimah Hassan</p>
                                     <small class="text-muted">Patient since 2023</small>
@@ -702,7 +702,7 @@
                                 Best clinic in Kajang! The doctors are very knowledgeable and the staff is friendly. Will definitely come back.
                             </p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
+                                <img src="assets/logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
                                 <div>
                                     <p class="mb-0 fw-bold">Mohan Verma</p>
                                     <small class="text-muted">Patient since 2022</small>
@@ -725,7 +725,7 @@
                                 Great experience with the ultrasound screening. Dr. Baljit explained everything clearly and patiently.
                             </p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
+                                <img src="assets/logo.png" alt="Patient" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
                                 <div>
                                     <p class="mb-0 fw-bold">Nur Aizah</p>
                                     <small class="text-muted">Patient since 2024</small>
@@ -749,25 +749,25 @@
             <div class="row g-4 align-items-center justify-content-center">
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="partner-logo">
-                        <img src="logo.png" alt="Partner" style="height: 80px; width: auto;">
+                        <img src="assets/logo.png" alt="Partner" style="height: 80px; width: auto;">
                     </div>
                     <p class="mt-3" data-en="Allied Healthcare Network" data-ms="Rangkaian Kesihatan Bersekutu">Allied Healthcare Network</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="partner-logo">
-                        <img src="logo.png" alt="Partner" style="height: 80px; width: auto;">
+                        <img src="assets/logo.png" alt="Partner" style="height: 80px; width: auto;">
                     </div>
                     <p class="mt-3" data-en="Medical Care Selangor" data-ms="Rawatan Perubatan Selangor">Medical Care Selangor</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="partner-logo">
-                        <img src="logo.png" alt="Partner" style="height: 80px; width: auto;">
+                        <img src="assets/logo.png" alt="Partner" style="height: 80px; width: auto;">
                     </div>
                     <p class="mt-3" data-en="Community Health Plus" data-ms="Kesihatan Komuniti Plus">Community Health Plus</p>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="partner-logo">
-                        <img src="logo.png" alt="Partner" style="height: 80px; width: auto;">
+                        <img src="assets/logo.png" alt="Partner" style="height: 80px; width: auto;">
                     </div>
                     <p class="mt-3" data-en="Family Care Insurance" data-ms="Insurans Penjagaan Keluarga">Family Care Insurance</p>
                 </div>
