trying and adjusting the  output in the  form section

--- a/index.html
+++ b/index.html
@@ -470,12 +470,10 @@
                             <textarea class="form-control" id="notes" rows="3" placeholder="Any special notes?" data-en-placeholder="Any special notes?" data-ms-placeholder="Sebarang nota khas?"></textarea>
                         </div>
                         <div class="d-flex gap-2">
-                            <button type="button" class="btn btn-whatsapp flex-grow-1" onclick="submitAppointmentForm(event)"><i class="fab fa-whatsapp me-2"></i>
-                            <span data-en="Confirm via WhatsApp" data-ms="Sahkan Melalui WhatsApp">Confirm via WhatsApp</span></button>
-                            <!-- <button class="btn btn-outline-secondary" onclick="prevStep(3)" data-en="Back" data-ms="Kembali">Back</button>
-                            <a href="https://wa.me/60172032048?text=I%20would%20like%20to%20book%20an%20appointment" target="_blank" class="btn btn-whatsapp flex-grow-1" onclick="submitAppointmentForm(event)">
+                            <button class="btn btn-outline-secondary" onclick="prevStep(3)" data-en="Back" data-ms="Kembali">Back</button>
+                            <button type="button" class="btn btn-whatsapp flex-grow-1" onclick="submitAppointmentForm(event)">
                                 <i class="fab fa-whatsapp me-2"></i><span data-en="Confirm via WhatsApp" data-ms="Sahkan Melalui WhatsApp">Confirm via WhatsApp</span>
-                            </a> -->
+                            </button>
                         </div>
                         <div class="text-center mt-3 small text-muted">
                             <p data-en="We'll send you a confirmation shortly" data-ms="Kami akan menghantar pengesahan tidak lama lagi">We'll send you a confirmation shortly</p>
