--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-wrap gap-3">
-                        <a href="https://wa.me/60172032048?text=Hello%20Klinik%20Medinura%2C%20I%20would%20like%20to%20schedule%20a%20visit%20for%20my%20family" target="_blank" class="btn btn-whatsapp btn-lg">
+                        <a href="https://wa.me/60105120050?text=Hello%20Klinik%20Medinura%2C%20I%20would%20like%20to%20schedule%20a%20visit%20for%20my%20family" target="_blank" class="btn btn-whatsapp btn-lg">
                             <i class="fab fa-whatsapp me-2"></i><span data-en="Schedule Your Visit" data-ms="Jadualkan Kunjungan Anda">Schedule Your Visit</span>
                         </a>
                         <a href="#health-checker" class="btn btn-try-checker btn-lg">
@@ -471,9 +471,9 @@
                         </div>
                         <div class="d-flex gap-2">
                             <button class="btn btn-outline-secondary" onclick="prevStep(3)" data-en="Back" data-ms="Kembali">Back</button>
-                            <button type="button" class="btn btn-whatsapp flex-grow-1" onclick="submitAppointmentForm(event)">
+                            <a href="https://wa.me/60105120050?text=I%20would%20like%20to%20book%20an%20appointment" target="_blank" class="btn btn-whatsapp flex-grow-1" onclick="submitAppointmentForm(event)">
                                 <i class="fab fa-whatsapp me-2"></i><span data-en="Confirm via WhatsApp" data-ms="Sahkan Melalui WhatsApp">Confirm via WhatsApp</span>
-                            </button>
+                            </a>
                         </div>
                         <div class="text-center mt-3 small text-muted">
                             <p data-en="We'll send you a confirmation shortly" data-ms="Kami akan menghantar pengesahan tidak lama lagi">We'll send you a confirmation shortly</p>
@@ -763,7 +763,7 @@
         <div class="container text-center text-white">
             <h2 class="mb-4" data-en="Ready to Take Care of Your Health?" data-ms="Bersedia Menjaga Kesihatan Anda?">Ready to Take Care of Your Health?</h2>
             <p class="lead mb-4" data-en="Book your appointment today via WhatsApp" data-ms="Tempah janji temu anda hari ini melalui WhatsApp">Book your appointment today via WhatsApp</p>
-            <a href="https://wa.me/60172032048" target="_blank" class="btn btn-whatsapp btn-lg">
+            <a href="https://wa.me/60105120050" target="_blank" class="btn btn-whatsapp btn-lg">
                 <i class="fab fa-whatsapp me-2"></i><span data-en="Contact Us Now" data-ms="Hubungi Kami Sekarang">Contact Us Now</span>
             </a>
         </div>
@@ -791,7 +791,7 @@
                     <div class="mb-3">
                         <p class="small fw-bold mb-1" data-en="Contact" data-ms="Hubungi"><i class="fas fa-phone text-primary me-2"></i>Contact</p>
                         <p class="small ms-4">
-                            <a href="tel:0172032048" class="text-decoration-none">017-2032048</a><br>
+                            <a href="tel:0105120050" class="text-decoration-none">010-5120050</a><br>
                             <small><i class="fab fa-whatsapp me-1"></i><span data-en="WhatsApp available" data-ms="WhatsApp tersedia">WhatsApp available</span></small>
                         </p>
                     </div>
