dark mode readibility fix

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         </div>
                         <div class="card-body">
                             <h5 data-en="Health Checkup Packages" data-ms="Pakej Pemeriksaan Kesihatan">Health Checkup Packages</h5>
-                            <p data-en="Complete health screening including blood tests, ECG, and physical examination for all age groups" data-ms="Pemeriksaan kesihatan lengkap termasuk ujian darah, ECG, dan pemeriksaan fizikal untuk semua kumpulan umur">
+                            <p data-en="Complete health screening including blood tests, ECG, and physical examination for all age groups" data-ms="Pakej pemeriksaan kesihatan lengkap termasuk ujian darah, ECG, dan pemeriksaan fizikal untuk semua kumpulan umur">
                                 Complete health screening including blood tests, ECG, and physical examination for all age groups
                             </p>
                             <p class="text-primary fw-bold" data-en="Popular Choice" data-ms="Pilihan Popular">Popular Choice</p>
