change nav bar style

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="#" onclick="scrollToTop(event)">
-                <img src="assets/logo.png" alt="Klinik Medinura" class="navbar-logo me-2" style="height:45px; border-radius:8px;"> 
-                <span class="fs-5" style="font-family: 'Poppins', sans-serif;">Klinik Medinura</span>
+                <img src="assets/logo.png" alt="Klinik Medinura" class="navbar-logo me-2" style="height:50px;"> 
+                <span class="fs-5 d-none d-sm-block" style="font-family: 'Poppins', sans-serif; color: var(--primary);">Klinik Medinura</span>
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,10 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="badge bg-primary bg-opacity-10 text-primary mb-3 px-3 py-2 rounded-pill">
+                    <div class="badge bg-white text-primary mb-3 px-3 py-2 rounded-pill shadow-sm">
                         <i class="fas fa-shield-heart me-2"></i> #1 Family Clinic in Kajang
                     </div>
-                    <h1 class="display-4 mb-4" data-en="Caring For Your Family's Health" data-ms="Menjaga Kesihatan Keluarga Anda">
+                    <h1 class="display-4 mb-4 fw-bold" data-en="Caring For Your Family's Health" data-ms="Menjaga Kesihatan Keluarga Anda">
                         Caring For Your Family's Health
                     </h1>
                     <p class="lead mb-4 text-muted" data-en="We're here for your family's health journey every single day, from 9am to 10pm." data-ms="Kami ada untuk perjalanan kesihatan keluarga anda setiap hari, dari jam 9 pagi hingga 10 malam.">
@@ -82,7 +82,9 @@
                             </div>
                         </div>
                         <div class="col-12 text-center">
-                            <img src="assets/logo.png" class="img-fluid rounded-4 shadow-lg" alt="Klinik Interior" style="max-height: 400px; object-fit: cover;">
+                            <div class="rounded-4 shadow-lg bg-white p-2" style="background: rgba(255,255,255,0.5);">
+                                <img src="assets/logo.png" class="img-fluid rounded-3" alt="Klinik Interior" style="max-height: 400px; object-fit: cover; width: 100%;">
+                            </div>
                         </div>
                     </div>
                 </div>
