--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="vr opacity-10"></div>
                         <div>
-                            <strong class="d-block text-heading">4.9/5</strong>
+                            <strong class="d-block text-heading">4.9</strong>
                             <small class="text-muted text-warning"><i class="fas fa-star"></i> Ratings</small>
                         </div>
                     </div>
