--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <button class="btn-icon-toggle" style="width: 35px; height: 35px;" onclick="toggleTheme()">
                     <i id="themeIconMobile" class="fas fa-moon"></i>
                 </button>
-                <button class="btn-icon-toggle" style="width: 35px; height: 35px; font-size: 0.8rem;" onclick="toggleLanguage()">BM</button>
+                <button class="btn-icon-toggle" id="langBtnMobile" style="width: 35px; height: 35px; font-size: 0.8rem;" onclick="toggleLanguage()">BM</button>
             </div>
         </div>
     </nav>
@@ -90,7 +90,7 @@
 
     <header class="hero-section" id="home">
         <div class="container position-relative z-2">
-            <div class="row align-items-center min-vh-100 py-5">
+            <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6 hero-text-col" data-aos="fade-right" data-aos-duration="1200">
                     <div class="badge-premium mb-4">
                         <i class="fas fa-star text-warning me-2"></i> <span data-en="Top Rated Clinic in Kajang" data-ms="Klinik Terbaik di Kajang">Top Rated Clinic in Kajang</span>
@@ -238,13 +238,13 @@
                                 <button class="quiz-btn" onclick="selectOption(1, 1)" data-en="Mild Fever (37.5 - 38.5°C)" data-ms="Demam Ringan (37.5 - 38.5°C)">Mild Fever (37.5 - 38.5°C)</button>
                                 <button class="quiz-btn" onclick="selectOption(1, 2)" data-en="High Fever (> 38.5°C)" data-ms="Demam Tinggi (> 38.5°C)">High Fever (> 38.5°C)</button>
                             </div>
-                            <div class="quiz-step" id="q2" style="display:none;">
+                            <div class="quiz-step" id="q2">
                                 <h5 class="mb-4" data-en="2. Duration of symptoms?" data-ms="2. Tempoh gejala?">2. Duration of symptoms?</h5>
                                 <button class="quiz-btn" onclick="selectOption(2, 0)" data-en="< 24 Hours" data-ms="< 24 Jam">< 24 Hours</button>
                                 <button class="quiz-btn" onclick="selectOption(2, 1)" data-en="1 - 3 Days" data-ms="1 - 3 Hari">1 - 3 Days</button>
                                 <button class="quiz-btn" onclick="selectOption(2, 2)" data-en="> 3 Days" data-ms="> 3 Hari">> 3 Days</button>
                             </div>
-                            <div class="quiz-step" id="q3" style="display:none;">
+                            <div class="quiz-step" id="q3">
                                 <h5 class="mb-4" data-en="3. Any severe pain or difficulty breathing?" data-ms="3. Sakit teruk atau sukar bernafas?">3. Any severe pain or difficulty breathing?</h5>
                                 <button class="quiz-btn" onclick="selectOption(3, 2)" data-en="Yes, Severe" data-ms="Ya, Teruk">Yes, Severe</button>
                                 <button class="quiz-btn" onclick="selectOption(3, 1)" data-en="Mild Discomfort" data-ms="Ketidakselesaan Ringan">Mild Discomfort</button>
