--- a/index.html
+++ b/index.html
@@ -453,38 +453,52 @@
     <footer class="footer-section">
         <div class="container">
             <div class="row gy-4">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-12">
                     <h4 class="text-white mb-3">Klinik Medinura</h4>
                     <p class="text-white-50" data-en="Providing trusted healthcare for the community with a modern approach. We care for your family like our own." data-ms="Menyediakan penjagaan kesihatan yang dipercayai untuk komuniti dengan pendekatan moden. Kami menjaga keluarga anda seperti keluarga sendiri.">Providing trusted healthcare for the community with a modern approach. We care for your family like our own.</p>
-                </div>
-                <div class="col-lg-2 col-6">
-                    <h6 class="text-white mb-3" data-en="Links" data-ms="Pautan">Links</h6>
-                    <ul class="list-unstyled text-white-50">
-                        <li><a href="#" data-en="Home" data-ms="Utama">Home</a></li>
-                        <li><a href="#services" data-en="Services" data-ms="Perkhidmatan">Services</a></li>
-                        <li><a href="#doctors" data-en="Doctors" data-ms="Doktor">Doctors</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-6">
-                    <h6 class="text-white mb-3" data-en="Resources" data-ms="Sumber">Resources</h6>
-                    <ul class="list-unstyled text-white-50">
-                        <li><a href="#" data-en="Blog" data-ms="Blog">Blog</a></li>
-                        <li><a href="#" data-en="FAQ" data-ms="Soalan Lazim">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4">
-                    <h6 class="text-white mb-3" data-en="Contact" data-ms="Hubungi">Contact</h6>
-                    <p class="text-white-50 mb-1">010-5120050</p>
-                    <p class="text-white-50">No 21-1 (GF), Jalan Sari Niaga, Kajang</p>
-                    <div class="social-icons mt-3">
+                    <div class="social-icons mt-4">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
+
+                <div class="col-lg-2 col-6">
+                    <h6 class="text-white mb-3" data-en="Quick Links" data-ms="Pautan Pantas">Quick Links</h6>
+                    <ul class="list-unstyled text-white-50">
+                        <li class="mb-2"><a href="#" class="text-white-50 text-decoration-none" data-en="Home" data-ms="Utama">Home</a></li>
+                        <li class="mb-2"><a href="#services" class="text-white-50 text-decoration-none" data-en="Services" data-ms="Perkhidmatan">Services</a></li>
+                        <li class="mb-2"><a href="#doctors" class="text-white-50 text-decoration-none" data-en="Doctors" data-ms="Doktor">Doctors</a></li>
+                        <li class="mb-2"><a href="#appointment-form" class="text-white-50 text-decoration-none" data-en="Book Now" data-ms="Tempah">Book Now</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-6">
+                    <h6 class="text-white mb-3" data-en="Contact Us" data-ms="Hubungi Kami">Contact Us</h6>
+                    <ul class="list-unstyled text-white-50">
+                        <li class="mb-3 d-flex"><i class="fas fa-phone-alt me-3 mt-1 text-primary"></i> 010-5120050</li>
+                        <li class="mb-3 d-flex"><i class="fas fa-map-marker-alt me-3 mt-1 text-primary"></i> <span>No 21-1 (GF), Jalan Sari Niaga, Kajang</span></li>
+                        <li class="mb-3 d-flex"><i class="fas fa-clock me-3 mt-1 text-primary"></i> <span data-en="Daily: 9AM - 10PM" data-ms="Harian: 9AM - 10PM">Daily: 9AM - 10PM</span></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-12">
+                    <h6 class="text-white mb-3" data-en="Find Us" data-ms="Lokasi Kami">Find Us</h6>
+                    <div class="map-container" style="border-radius: 15px; overflow: hidden; border: 2px solid rgba(255,255,255,0.1);">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.6645516086884!2d101.78923331475762!3d2.912345997878345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdcc742f150033%3A0x277494f6e52277d!2sKajang!5e0!3m2!1sen!2smy!4v1675955621451!5m2!1sen!2smy" 
+                            width="100%" 
+                            height="180" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy">
+                        </iframe>
+                    </div>
+                </div>
             </div>
+
             <div class="border-top border-white-10 mt-5 pt-4 text-center">
-                <small class="text-white-50">&copy; 2026 Klinik Medinura. <span data-en="All Rights Reserved." data-ms="Hak Cipta Terpelihara.">All Rights Reserved.</span></small>
+                <small class="text-white-50">© 2026 Klinik Medinura. <span data-en="All Rights Reserved." data-ms="Hak Cipta Terpelihara.">All Rights Reserved.</span></small>
             </div>
         </div>
     </footer>
